--- a/src/app/modules/shared/tupa/components/tupa-process-tab/tupa-process-tab.component.html
+++ b/src/app/modules/shared/tupa/components/tupa-process-tab/tupa-process-tab.component.html
@@ -42,3 +42,6 @@
   [isOpen]="isOpen"
   (eventClose)="onClose()"
   (eventSuccess)="onConfirm()" />
+<!-- loading -->
+<app-content-loading *ngIf="finishedLoading" title="Finalizando proceso..." />
+<app-content-loading *ngIf="cancelLoading" title="Cancelando proceso..." />
