--- a/src/app/shared/components/content-loading/content-loading.component.html
+++ b/src/app/shared/components/content-loading/content-loading.component.html
@@ -2,7 +2,7 @@
   <div class="flex h-full items-center justify-center bg-slate-300/20">
     <div class="flex flex-col items-center rounded-sm bg-white p-5 pl-7 pr-7 shadow-md">
       <app-loading />
-      Procesando...
+      {{ title }}
     </div>
   </div>
 </div>
