--- a/src/app/modules/dev-03/tupa-05/components/tupa-05-mercancia-pecuaria/tupa-05-mercancia-pecuaria.component.html
+++ b/src/app/modules/dev-03/tupa-05/components/tupa-05-mercancia-pecuaria/tupa-05-mercancia-pecuaria.component.html
@@ -1,6 +1,7 @@
 <form>
   <!-- header -->
-  <h6 class="mb-7 border-b border-dashed border-b-gray-600 pb-2 text-lg font-bold text-gray-900 dark:text-white">
+  <h6
+    class="mb-7 border-b border-dashed border-b-gray-600 pb-2 text-lg font-bold text-gray-900 dark:text-white">
     Mercancia Pecuaria
   </h6>
 
@@ -25,7 +26,9 @@
         class="mr-2"
         [checked]="productService.isActiveProductType('P')"
         (change)="onProductType('P')" />
-      <label for="product" class="col-span-2 mb-2 text-sm font-medium text-gray-900 dark:text-white">Producto</label>
+      <label for="product" class="col-span-2 mb-2 text-sm font-medium text-gray-900 dark:text-white"
+        >Producto</label
+      >
     </div>
   </div>
 
@@ -34,7 +37,10 @@
     <h6
       class="relative mb-7 border-b border-dashed border-b-gray-600 pb-2 text-lg font-bold text-gray-900 dark:text-white">
       Animal vivo
-      <button class="absolute right-0 top-0 text-primary" type="button" (click)="openCreateAnimal()">
+      <button
+        class="absolute right-0 top-0 text-primary"
+        type="button"
+        (click)="openCreateAnimal()">
         <u>Agregar</u>
       </button>
     </h6>
@@ -49,9 +55,13 @@
 
   <!-- product -->
   <div *ngIf="productService.isActiveProductType('P')">
-    <h6 class="relative border-b border-dashed border-b-gray-600 pb-2 text-lg font-bold text-gray-900 dark:text-white">
+    <h6
+      class="relative border-b border-dashed border-b-gray-600 pb-2 text-lg font-bold text-gray-900 dark:text-white">
       Producto
-      <button class="absolute right-0 top-0 text-primary" type="button" (click)="openCreateSubProduct()">
+      <button
+        class="absolute right-0 top-0 text-primary"
+        type="button"
+        (click)="openCreateSubProduct()">
         <u>Agregar</u>
       </button>
     </h6>
@@ -76,10 +86,3 @@
   [isOpen]="isOpenCreateSubProduct"
   (eventClose)="closeCreateSubProduct()"
   (eventSave)="productService.addProduct($event)" />
-
-<!-- edit subproduct -->
-<!-- <app-product-subproduct-edit
-  [isOpen]="isOpenEditSubProduct"
-  [product]="cuarentena"
-  (eventClose)="closeEditSubProduct()"
-  (eventSave)="onAdd($event)" /> -->
