--- a/src/app/modules/dashboard/pages/tupa-04-page/tupa-04-page.component.html
+++ b/src/app/modules/dashboard/pages/tupa-04-page/tupa-04-page.component.html
@@ -1,4 +1,6 @@
-<div class="mx-auto px-4 py-4 sm:px-8 lg:container">
-  <app-dashboard-header title="REGISTRO DE SOLICITUD CA-04"/>
-  <app-tupa-04-tab-container />
+<div class="mx-auto px-4 py-4 lg:container sm:px-8">
+  <app-tupa-04-tab-container
+    title="REGISTRO DE SOLICITUD CA-04"
+    (eventCancel)="onCancel($event)"
+    (eventFinished)="onFinished($event)" />
 </div>
