--- a/src/app/modules/dev-03/tupa-04/components/tupa-04-info-animal/tupa-04-info-animal.component.html
+++ b/src/app/modules/dev-03/tupa-04/components/tupa-04-info-animal/tupa-04-info-animal.component.html
@@ -8,72 +8,10 @@
   </h6>
 
   <div class="mb-10">
-    <div class="relative overflow-x-auto">
-      <div class="text-right"></div>
-      <table class="w-full table-auto">
-        <!--Table head-->
-        <thead class="text-xs uppercase text-slate-500">
-          <tr>
-            <th class="py-3 text-left">P.A</th>
-            <th class="py-3 text-left">Especie/Categoría</th>
-            <th class="py-3 text-left">Sexo</th>
-            <th class="py-3 text-left">Edad</th>
-            <th class="py-3 text-left">Procedencia</th>
-            <th class="py-3 text-center">Cantidad</th>
-            <th class="py-3 text-center">Acciones</th>
-          </tr>
-        </thead>
-        <!--Table body-->
-        <tbody>
-          <tr class="border-b border-dashed border-border hover:bg-card" *ngFor="let item of cuarentenas">
-            <td class="py-2 pr-2">
-              <span class="text-sm font-semibold">
-                {{ item.productId }}
-              </span>
-            </td>
-            <td class="py-2 pl-2 text-left">
-              <span class="text-sm font-semibold">
-                {{ item.productName }}
-              </span>
-            </td>
-            <td class="py-2 pl-2 text-left">
-              <span class="text-sm font-semibold">
-                {{ item.gender }}
-              </span>
-            </td>
-            <td class="py-2 pl-2 text-left">
-              <span class="text-sm font-semibold">
-                {{ item.age }}
-              </span>
-            </td>
-            <td class="py-2 pl-2 text-left">
-              <span class="text-sm font-semibold">
-                {{ item.origin }}
-              </span>
-            </td>
-            <td class="py-2 pl-2 text-center">
-              <span class="text-sm font-semibold">
-                {{ item.amount }}
-              </span>
-            </td>
-            <td>
-              <div class="flex justify-center gap-2">
-                <svg-icon
-                  src="assets/icons/heroicons/outline/trash.svg"
-                  (click)="onDelete(item)"
-                  [svgClass]="'h-5 w-5 text-muted-foreground/50 cursor-pointer'">
-                </svg-icon>
-                <svg-icon
-                  src="assets/icons/heroicons/outline/edit.svg"
-                  (click)="onEdit(item)"
-                  [svgClass]="'h-5 w-5 text-muted-foreground/50 cursor-pointer'">
-                </svg-icon>
-              </div>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+    <app-product-animal-table
+      [data]="productService.getProducts()"
+      (eventEdit)="onEdit($event)"
+      (eventDelete)="onDelete($event)" />
   </div>
 </form>
 
@@ -81,12 +19,5 @@
 <app-product-animal-create
   [isOpen]="isOpenCreateAnimal"
   (eventClose)="closeCreateAnimal()"
-  (eventSave)="onAdd($event)" />
-
-<!-- edit animal -->
-<app-product-animal-edit
-  [isOpen]="isOpenEditAnimal"
-  [product]="cuarentena"
-  (eventClose)="closeEditAnimal()"
-  (eventSave)="onAdd($event)" />
+  (eventSave)="productService.addProduct($event)" />
 >
