--- a/src/app/modules/dev-03/tupa-05/components/tupa-05-tab-container/tupa-05-tab-container.component.html
+++ b/src/app/modules/dev-03/tupa-05/components/tupa-05-tab-container/tupa-05-tab-container.component.html
@@ -31,8 +31,9 @@
     *ngIf="processService.isActiveCurrentTab('PARTE_VI')"
     [expediente]="expediente" />
 </div>
-<!-- loading -->
-<app-content-loading
-  *ngIf="
-    expedienteCreate.getLoading() || expedienteFind.getLoading() || expedienteEdit.getLoading()
-  " />
+<!-- loading create -->
+<app-content-loading title="Guardando..." *ngIf="expedienteCreate.getLoading()" />
+<!-- loading edit -->
+<app-content-loading title="Actualizando..." *ngIf="expedienteEdit.getLoading()" />
+<!-- loading get expediente -->
+<app-content-loading title="Obteniendo expediente..." *ngIf="expedienteFind.getLoading()" />
