add prefix storage => expediente

--- a/src/app/modules/dev-03/tupa-04/components/tupa-04-recinto/tupa-04-recinto.component.html
+++ b/src/app/modules/dev-03/tupa-04/components/tupa-04-recinto/tupa-04-recinto.component.html
@@ -26,4 +26,13 @@
       </div>
     </div>
   </div>
+
+  <div class="mt-5 text-right">
+    <button
+      [disabled]="!createForm.valid"
+      type="submit"
+      class="rounded-lg bg-primary px-5 py-3 text-center text-sm font-medium text-white ring-primary/50 focus:outline-none focus:ring-4">
+      Continuar
+    </button>
+  </div>
 </form>
