--- a/src/app/modules/shared/method-payment/components/payment-account-select/payment-account-select.component.html
+++ b/src/app/modules/shared/method-payment/components/payment-account-select/payment-account-select.component.html
@@ -3,6 +3,6 @@
   (change)="onChange($event)"
   [disabled]="isDisabled || false"
   class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary">
-  <option value="">Seleccionar</option>
+  <option value="">-- Seleccione --</option>
   <option *ngFor="let item of this.service.getData()" [value]="item.id">{{ item.number }}</option>
 </select>
